feat: 优化文档与链接地址

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="utf-8">
-  <title>sdk打包工具</title>
+  <title>call-app测试</title>
   <link rel="dns-prefetch" href="https://s1.zhuanstatic.com">
   <link rel="dns-prefetch" href="https://img1.zhuanstatic.com">
   <link rel="icon" href="//8.zhuanzhuan.com/favicon.ico" type="image/x-icon">
@@ -12,9 +12,22 @@
   <meta content="telephone=no,email=no" name="format-detection" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+
+  <style>
+    .btn{
+      display: block;
+      width: 200px;
+      height: 30px;
+      font-size: 14px;
+      text-align: center;
+      line-height: 30px;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
-  <div class="ceshi">测试</div>
+  <h1 style="text-align: center;">call-app</h1>
+  <input type="button" class="btn" value="点击测试call-app" id="btn" />
 </body>
 
 </html>
