feat: 微信端吊起失败提示

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,33 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="utf-8">
-  <title>call-app测试</title>
-  <link rel="dns-prefetch" href="https://s1.zhuanstatic.com">
-  <link rel="dns-prefetch" href="https://img1.zhuanstatic.com">
-  <link rel="icon" href="//8.zhuanzhuan.com/favicon.ico" type="image/x-icon">
-  <meta name="keywords"  content="" />
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <meta content="telephone=no,email=no" name="format-detection" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <head>
+    <meta charset="utf-8" />
+    <title>call-app测试</title>
+    <link rel="dns-prefetch" href="https://s1.zhuanstatic.com" />
+    <link rel="dns-prefetch" href="https://img1.zhuanstatic.com" />
+    <link
+      rel="icon"
+      href="//8.zhuanzhuan.com/favicon.ico"
+      type="image/x-icon"
+    />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <meta content="telephone=no,email=no" name="format-detection" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
-  <style>
-    .btn{
-      display: block;
-      width: 200px;
-      height: 30px;
-      font-size: 14px;
-      text-align: center;
-      line-height: 30px;
-      margin: 0 auto;
-    }
-  </style>
-</head>
-<body>
-  <h1 style="text-align: center;">call-app</h1>
-  <input type="button" class="btn" value="点击测试call-app" id="btn" />
-</body>
+    <style>
+      body {
+        text-align: center;
+      }
+      .btn {
+        display: block;
+        width: 200px;
+        height: 30px;
+        font-size: 14px;
+        text-align: center;
+        line-height: 30px;
+        margin: 0 auto;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 style="text-align: center;">call-app</h1>
+    <input type="button" class="btn" value="点击测试call-app" id="btn" />
 
+    <wx-open-launch-app
+      id="launch-btn"
+      appid="wx6f1a8464fa672b11"
+      extinfo="zzyige://jump/group/manage/jump"
+    >
+      <template>
+        <style>
+          .launch-btn {
+            padding: 12px;
+            margin-top: 50px;
+          }
+        </style>
+        <button class="launch-btn">微信launch功能</button>
+      </template>
+    </wx-open-launch-app>
+  </body>
 </html>
