feat: 统一卖家版、采货侠、一格吊起转转app的逻辑

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,8 @@
     <meta content="telephone=no,email=no" name="format-detection" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-
+    <script src="https://cdn.bootcss.com/vConsole/3.3.2/vconsole.min.js"></script>
+    <script>new VConsole();</script>
     <style>
       body {
         text-align: center;
