--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,7 @@
       body {
         text-align: center;
       }
+
       .btn {
         display: block;
         width: 150px;
@@ -34,8 +35,9 @@
       }
     </style>
   </head>
+
   <body>
-    <h3 style="text-align: center;">唤起App测试Demo</h3>
+    <h3 style="text-align: center">唤起App测试Demo</h3>
     <input type="button" class="btn" value="点击唤起App" id="btn" />
   </body>
 </html>
