--- a/demo/index.html
+++ b/demo/index.html
@@ -5,11 +5,7 @@
     <title>唤起App测试demo</title>
     <link rel="dns-prefetch" href="https://s1.zhuanstatic.com" />
     <link rel="dns-prefetch" href="https://img1.zhuanstatic.com" />
-    <link
-      rel="icon"
-      href="//8.zhuanzhuan.com/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="//8.zhuanzhuan.com/favicon.ico" type="image/x-icon" />
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta
@@ -59,7 +55,7 @@
       .wrap .download .display-info {
         margin-top: 10px;
       }
-      .wrap .display-info input[type=textarea] {
+      .wrap .display-info input[type='textarea'] {
         height: 20px;
         word-wrap: break-word;
         padding: 10px;
@@ -80,7 +76,7 @@
   </head>
 
   <body>
-     <!-- 利用 vue 语法 -->
+    <!-- 利用 vue 语法 -->
     <script src="https://dl.zhuanstatic.com/fecommon/vue3.1.5.js"></script>
     <h3 style="text-align: center">唤起App测试Demo</h3>
     <div id="app"></div>
