feat: 修改安卓微信策略&&新增version^&&支持plugin

--- a/demo/index.html
+++ b/demo/index.html
@@ -78,7 +78,25 @@
   <body>
     <!-- 利用 vue 语法 -->
     <script src="https://dl.zhuanstatic.com/fecommon/vue3.1.5.js"></script>
+    <!-- <script src="//s1.zhuanstatic.com/common/zzapp/static/js/1.27.14/index.js"></script> -->
+
+    <!-- <script src="//s1.zhuanstatic.com/common/call-app/static/js/3.2.0/index.min.js"></script> -->
+
+    <!-- $ npm i @zz-common/zz-jssdk -save -->
+    <!-- <script>
+      const zapp = window["@zz-common/zz-jssdk"].default
+
+      // 示例：调用统跳协议页面
+      zapp.enterUnifiedUrl({unifiedUrl: ''}, function(res) {
+        console.log('enterUnifiedUrl-res', res)
+        if(res.code == 200 || res.code == 0) {
+          // xxx
+        }
+      })
+    </script> -->
     <h3 style="text-align: center">唤起App测试Demo</h3>
+
+
     <div id="app"></div>
   </body>
 </html>
